# SoulBrowser

./: .gitignore  Cargo.toml  Cargo.toml.patch  Cargo_soul_integration.toml  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  README_CN.md  SPEC_DIFF.md  build.rs  plan.json  plan_test.json
crates/action-flow/: Cargo.toml
crates/action-flow/src/: errors.rs  executor.rs  lib.rs  strategies.rs  types.rs
crates/action-gate/: Cargo.toml
crates/action-gate/src/: conditions.rs  errors.rs  evidence.rs  lib.rs  types.rs  validator.rs
crates/action-locator/: Cargo.toml
crates/action-locator/src/: bridge.rs  errors.rs  healer.rs  lib.rs  resolver.rs  strategies.rs  types.rs
crates/action-primitives/: Cargo.toml
crates/action-primitives/src/: errors.rs  lib.rs  locator.rs  primitives.rs  types.rs  waiting.rs
crates/action-primitives/src/primitives/: click.rs  navigate.rs  scroll.rs  select.rs  type_text.rs  wait.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: convert.rs  errors.rs  guardrails.rs  lib.rs  llm_provider.rs  model.rs  plan.rs  plan_validator.rs  weather.rs
crates/agent-core/src/agent_loop/: config.rs  controller.rs  element_tree.rs  mod.rs  prompt.rs  state_formatter.rs  types.rs
crates/agent-core/src/planner/: mod.rs  quote_sources.rs  rule_based.rs  stage_graph.rs  stages.rs
crates/agent-core/tests/: intent_recipes.rs  llm_provider.rs  plan_validator.rs  planner.rs
crates/cdp-adapter/: Cargo.toml
crates/cdp-adapter/src/: adapter.rs  commands.rs  lib.rs  metrics.rs  registry.rs  transport.rs  util.rs
crates/cdp-adapter/tests/: cdp_contract.rs  integration_tests.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: lib.rs
crates/event-store/: Cargo.toml
crates/event-store/src/: api.rs  config.rs  drop_policy.rs  errors.rs  idempotency.rs  lib.rs  metrics.rs  model.rs  redact.rs
crates/event-store/src/cold/: mod.rs  reader.rs  rotate.rs  writer.rs
crates/event-store/src/hot/: mod.rs  rings.rs  writer.rs
crates/event-store/src/read/: export.rs  mod.rs  query.rs  replay.rs  stream.rs
crates/integration-soulbase/: Cargo.toml
crates/integration-soulbase/src/: lib.rs
crates/l6-observe/: Cargo.toml
crates/l6-observe/src/: exporter.rs  guard.rs  lib.rs  metrics.rs  policy.rs  tracing.rs
crates/l6-privacy/: Cargo.toml
crates/l6-privacy/src/: apply.rs  context.rs  errors.rs  labels.rs  lib.rs  policy.rs  text.rs  url.rs
crates/l6-timeline/: Cargo.toml
crates/l6-timeline/src/: api.rs  errors.rs  lib.rs  model.rs  policy.rs  ports.rs
crates/l6-timeline/src/adapters/: event_store.rs  events.rs  mod.rs  state_center.rs
crates/l6-timeline/src/export/: jsonl.rs
crates/l6-timeline/src/reader/: fetch.rs  mod.rs  plan.rs
crates/l6-timeline/src/stitch/: build.rs  fold.rs  mod.rs
crates/l6-timeline/tests/: integration.rs
crates/l7-adapter/: Cargo.toml  build.rs
crates/l7-adapter/proto/: adapter.proto
crates/l7-adapter/src/: auth.rs  bootstrap.rs  errors.rs  events.rs  grpc.rs  guard.rs  http.rs  idempotency.rs  lib.rs  map.rs  mcp.rs  plugins.rs  policy.rs  ports.rs  privacy.rs  schema.rs  trace.rs
crates/l7-plugin/: Cargo.toml
crates/l7-plugin/src/: audit.rs  errors.rs  guard.rs  kill_switch.rs  lib.rs  manifest.rs  metrics.rs  policy.rs  privacy.rs  registry.rs  runtime.rs  sandbox.rs
crates/l7-plugin/src/hooks/: mod.rs  on_export_line.rs  on_span.rs  (+2 more)
crates/l7-wd-bridge/: Cargo.toml
crates/l7-wd-bridge/src/: auth.rs  bootstrap.rs  dispatcher.rs  errors.rs  guard.rs  handlers.rs  lib.rs  mapping.rs  model.rs  policy.rs  privacy.rs  state.rs  trace.rs
crates/network-tap-light/: Cargo.toml
crates/network-tap-light/src/: config.rs  lib.rs
crates/network-tap-light/tests/: state_management.rs
crates/perceiver-hub/: Cargo.toml
crates/perceiver-hub/src/: errors.rs  hub.rs  lib.rs  models.rs
crates/perceiver-semantic/: Cargo.toml
crates/perceiver-semantic/src/: classifier.rs  errors.rs  keywords.rs  language.rs  lib.rs  models.rs  semantic.rs  summarizer.rs
crates/perceiver-structural/: Cargo.toml
crates/perceiver-structural/src/: api.rs  cache.rs  differ.rs  errors.rs  events.rs  judges.rs  lib.rs  lifecycle.rs  metrics.rs  model.rs  policy.rs  ports.rs  reason.rs  redact.rs  sampler.rs  structural.rs
crates/perceiver-structural/tests/: cache_integration.rs
crates/perceiver-visual/: Cargo.toml
crates/perceiver-visual/src/: cache.rs  diff.rs  errors.rs  lib.rs  metrics.rs  models.rs  ocr.rs  screenshot.rs  visual.rs
crates/permissions-broker/: Cargo.toml
crates/permissions-broker/src/: cdp_transport.rs  config.rs  lib.rs
crates/permissions-broker/tests/: policy_resolution.rs
crates/policy-center/: Cargo.toml
crates/policy-center/src/: api.rs  defaults.rs  errors.rs  lib.rs  loader.rs  model.rs  override_store.rs  tests.rs
crates/registry/: Cargo.toml
crates/registry/src/: api.rs  audit.rs  errors.rs  health.rs  ingest.rs  lib.rs  metrics.rs  model.rs  router.rs  state.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: api.rs  error.rs  executor.rs  lane.rs  lib.rs  metrics.rs  model.rs  orchestrator.rs  route_events.rs  runtime.rs
crates/snapshot-store/: Cargo.toml
crates/snapshot-store/src/: api.rs  errors.rs  guard.rs  hash.rs  lib.rs  metrics.rs  model.rs  policy.rs
crates/soulbrowser-kernel/: Cargo.toml  Cargo.toml.patch
crates/soulbrowser-kernel/src/: agent_judge.rs  app_context.rs  app_settings.rs  block_detect.rs  chat_support.rs  console_fixture.rs  errors.rs  gateway.rs  gateway_policy.rs  intent.rs  interceptors.rs  judge.rs  kernel.rs  l0_bridge.rs  lib.rs  manual_override.rs  metrics.rs  perception_service.rs  plugin_registry.rs  replan.rs  runtime.rs  soulbase_shim.rs  storage.rs  structured_output.rs  task_status.rs  task_store.rs  tool_registry.rs  tools.rs  types.rs  utils.rs  visualization.rs
crates/state-center/: Cargo.toml
crates/state-center/src/: lib.rs
crates/stealth/: Cargo.toml
crates/stealth/src/: config.rs  lib.rs
crates/stealth/tests/: runtime_smoke.rs
(+524 files in other folders)
