# Single crate project - no workspace needed

[workspace]
members = [
    "crates/cdp-adapter",
    "crates/permissions-broker",
    "crates/network-tap-light",
    "crates/stealth",
    "crates/extensions-bridge",
    "crates/event-bus",
    "crates/core-types",
    "crates/registry",
    "crates/scheduler",
    "crates/state-center",
    "crates/policy-center",
    "crates/event-store",
    "crates/snapshot-store",
    "crates/perceiver-structural",
    "crates/perceiver-visual",
    "crates/perceiver-semantic",
    "crates/perceiver-hub",
    "crates/action-primitives",
    "crates/action-locator",
    "crates/action-gate",
    "crates/action-flow",
    "crates/agent-core",
    "crates/l6-observe",
    "crates/l6-timeline",
    "crates/l6-privacy",
    "crates/l7-adapter",
    "crates/l7-plugin",
    "crates/memory-center",
    "crates/soulbrowser-kernel",
    "crates/integration-soulbase",
    "crates/soulbrowser-actions",
]
resolver = "2"

[workspace.dependencies]
home = { version = "=0.5.5" }

[package]
name = "soulbrowser-cli"
version = "1.0.0"
edition = "2021"
authors = ["SoulBrowser Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/soulbrowser"
description = "Intelligent Web Automation with Soul - CLI application"
readme = "README.md"
keywords = ["browser", "automation", "ai", "web", "testing"]
categories = ["web-programming", "development-tools", "automation"]
rust-version = "1.70"

[lib]
name = "soulbrowser_cli"
path = "src/lib.rs"

[[bin]]
name = "soulbrowser"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7" }
async-trait = "0.1"
async-recursion = "1.0"
once_cell = "1.19"
async-stream = "0.3"
soulbrowser-core-types = { path = "crates/core-types", features = ["serde-full"] }
soulbrowser-event-bus = { path = "crates/event-bus" }
soulbrowser-registry = { path = "crates/registry" }
soulbrowser-scheduler = { path = "crates/scheduler", features = ["serde"] }
soulbrowser-state-center = { path = "crates/state-center" }
soulbrowser-policy-center = { path = "crates/policy-center" }
cdp-adapter = { path = "crates/cdp-adapter" }
network-tap-light = { path = "crates/network-tap-light" }
action-primitives = { path = "crates/action-primitives" }
agent-core = { path = "crates/agent-core" }
soulbrowser-kernel = { path = "crates/soulbrowser-kernel" }
dashmap = "5"
parking_lot = "0.12"
perceiver-structural = { path = "crates/perceiver-structural" }
perceiver-visual = { path = "crates/perceiver-visual" }
perceiver-semantic = { path = "crates/perceiver-semantic" }
perceiver-hub = { path = "crates/perceiver-hub" }
permissions-broker = { path = "crates/permissions-broker" }
url = "2.5"
base64 = "0.22"
hex = "0.4"
prometheus = "0.13"
lazy_static = "1.4"
axum = { version = "0.7", features = ["tokio", "ws"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
l6-observe = { path = "crates/l6-observe" }
l6-timeline = { path = "crates/l6-timeline" }
event-store = { path = "crates/event-store" }
l7-adapter = { path = "crates/l7-adapter" }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
memory-center = { path = "crates/memory-center" }
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "png"] }
font8x8 = "0.3"

# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
csv = "1.3"
humantime = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration and directories
dirs = "5.0"
tempfile = "3.8"

# Time & Date
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"



[dev-dependencies]
tokio-test = "0.4"
serial_test = "2.0"
l6-privacy = { path = "crates/l6-privacy" }
l7-adapter = { path = "crates/l7-adapter" }
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0"
assert_cmd = "2.0"



[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["soulbase"]
soulbase = ["soulbrowser-kernel/soulbase"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
