[package]
name = "action-flow"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }
async-trait = { version = "0.1" }
async-recursion = { version = "1.0" }
tokio-util = "0.7"

# Error handling
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Time handling
chrono = { version = "0.4" }

# Logging
tracing = { version = "0.1" }

# UUIDs
uuid = { version = "1.0", features = ["v4"] }

# Internal dependencies
action-primitives = { path = "../action-primitives" }
action-locator = { path = "../action-locator" }
action-gate = { path = "../action-gate" }
soulbrowser-core-types = { path = "../core-types" }
soulbrowser-policy-center = { path = "../policy-center" }

[dev-dependencies]
tokio-test = "0.4"
