[package]
name = "action-gate"
version = "0.1.0"
edition = "2021"
authors = ["SoulBrowser Team"]
license = "MIT OR Apache-2.0"
description = "L3 Post-conditions Gate - Multi-signal validation and evidence collection"

[dependencies]
# Core types
soulbrowser-core-types = { path = "../core-types" }
action-primitives = { path = "../action-primitives" }
action-locator = { path = "../action-locator" }
cdp-adapter = { path = "../cdp-adapter" }

# Async runtime
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for pattern matching
regex = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
