[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"
action-flow = { path = "../action-flow" }
action-gate = { path = "../action-gate" }
action-primitives = { path = "../action-primitives" }
soulbrowser-core-types = { path = "../core-types", features = ["serde-full"] }
