[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"
soulbrowser-actions = { path = "../soulbrowser-actions" }
soulbrowser-core-types = { path = "../core-types", features = ["serde-full"] }
