[package]
name = "soulbrowser-event-bus"
version = "0.1.0"
edition = "2021"
description = "Lightweight event bus abstraction for SoulBrowser L1"
license = "MIT OR Apache-2.0"
authors = ["SoulBrowser Team"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.39", features = ["rt", "sync", "macros"] }
tracing = "0.1"
thiserror = "1.0"
soulbrowser-core-types = { path = "../core-types" }

[features]
default = []
