[package]
name = "event-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "soulbrowser_event_store"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures = "0.3"
parking_lot = "0.12"
ringbuf = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "sync", "rt"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
soulbrowser-core-types = { path = "../core-types", features = ["serde-full"] }
zstd = { version = "0.13", features = ["legacy"] }

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
