[package]
name = "l6-observe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SoulBrowser Team"]

[dependencies]
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry", "env-filter"] }
hdrhistogram = "7"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
once_cell = "1.19"
lazy_static = "1.4"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["sync", "rt", "signal"] }
l6-privacy = { path = "../l6-privacy" }

[features]
default = []
otlp = ["opentelemetry", "opentelemetry-otlp"]

[dependencies.opentelemetry]
version = "0.20"
optional = true
features = ["rt-tokio"]

[dependencies.opentelemetry-otlp]
version = "0.13"
optional = true
features = ["http-proto", "tonic"]

[dependencies.prometheus]
version = "0.13"
optional = true
