[package]
name = "l6-timeline"
version = "0.1.0"
edition = "2021"
authors = ["SoulBrowser Team"]
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.19"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
event-store = { path = "../event-store" }
soulbrowser-state-center = { path = "../state-center" }
soulbrowser-event-bus = { path = "../event-bus" }
soulbrowser-core-types = { path = "../core-types", features = ["serde-full"] }

[dev-dependencies]
tempfile = "3.10"
