[package]
name = "l7-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["tokio"] }
dashmap = "5"
governor = { version = "0.6", default-features = false, features = ["std"] }
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1.39", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.11", features = ["transport"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"

l6-privacy = { path = "../l6-privacy" }
l6-observe = { path = "../l6-observe" }
l6-timeline = { path = "../l6-timeline" }
soulbrowser-core-types = { path = "../core-types", features = ["serde-full"] }
soulbrowser-scheduler = { path = "../scheduler" }
l7-plugin = { path = "../l7-plugin" }

[features]
default = []
http = []
grpc = []
mcp = []

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
serial_test = "2.0"
tokio-stream = { version = "0.1", features = ["net"] }
hmac = "0.12"
sha2 = "0.10"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"
