[package]
name = "l7-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5"
once_cell = "1.19"
parking_lot = "0.12"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
async-trait = "0.1"
wasmtime = "17"
wasmtime-wasi = { version = "17", features = ["preview2"] }
bytes = "1.6"

l6-privacy = { path = "../l6-privacy" }
l6-observe = { path = "../l6-observe" }

[features]
default = []
wasm = []

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
