[package]
name = "l7-wd-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["tokio"] }
dashmap = "5"
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.39", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
url = "2.5"

l6-privacy = { path = "../l6-privacy" }
soulbrowser-core-types = { path = "../core-types", features = ["serde-full"] }
soulbrowser-scheduler = { path = "../scheduler" }

[features]
default = []

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
serial_test = "2.0"
