[package]
name = "network-tap-light"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SoulBrowser Team"]
description = "SoulBrowser L0 network tap (light)"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
