[package]
name = "perceiver-semantic"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# NLP and text processing
unicode-segmentation = "1.11"
regex = "1.10"

# Language detection
whatlang = "0.16"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"

# Internal dependencies
soulbrowser-core-types = { path = "../core-types" }
perceiver-structural = { path = "../perceiver-structural" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Advanced NLP features (would require heavier dependencies)
advanced-nlp = []
