[package]
name = "perceiver-structural"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dashmap = "5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
thiserror = "1"
uuid = "1"

cdp-adapter = { path = "../cdp-adapter" }
network-tap-light = { path = "../network-tap-light" }
soulbrowser-policy-center = { path = "../policy-center" }
soulbrowser-registry = { path = "../registry" }
soulbrowser-state-center = { path = "../state-center" }
soulbrowser-core-types = { path = "../core-types" }

[dev-dependencies]
serde_json = "1"
