[package]
name = "perceiver-visual"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async and traits
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing (using 0.24 for stability)
image = "0.24"
imageproc = "0.23"

# Caching
dashmap = "6.0"
lru = "0.12"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"

# Internal dependencies
cdp-adapter = { path = "../cdp-adapter" }
soulbrowser-core-types = { path = "../core-types" }

# OCR (optional, requires tesseract installation)
[dependencies.tesseract]
version = "0.15"
optional = true

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
ocr = ["tesseract"]
