[package]
name = "permissions-broker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SoulBrowser Team"]
description = "SoulBrowser L0 permissions broker"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
humantime = "2.1"
dashmap = "5.5"
serde_yaml = "0.9"
cdp-adapter = { path = "../cdp-adapter" }

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }

[features]
default = []
