[package]
name = "soulbrowser-scheduler"
version = "0.1.0"
edition = "2021"
description = "Dispatcher & scheduler for SoulBrowser L1 unified kernel"
license = "MIT OR Apache-2.0"
authors = ["SoulBrowser Team"]

[dependencies]
async-trait = "0.1"
dashmap = "5"
futures = "0.3"
parking_lot = "0.12"
tokio = { version = "1.39", features = ["rt", "sync", "macros", "time"] }
tracing = "0.1"
thiserror = "1.0"
soulbrowser-core-types = { path = "../core-types" }
soulbrowser-registry = { path = "../registry" }
soulbrowser-state-center = { path = "../state-center" }
serde = { version = "1.0", features = ["derive"], optional = true }
metrics = { version = "0.24", optional = true }
once_cell = "1.19"

[features]
default = []
metrics = ["dep:metrics"]
serde = ["dep:serde", "soulbrowser-core-types/serde-full"]
