[package]
name = "soulbrowser-state-center"
version = "0.1.0"
edition = "2021"
description = "Lightweight state center for SoulBrowser L1 unified kernel"
license = "MIT OR Apache-2.0"
authors = ["SoulBrowser Team"]

[dependencies]
async-trait = "0.1"
parking_lot = "0.12"
soulbrowser-core-types = { path = "../core-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5"

[dev-dependencies]
tokio = { version = "1.39", features = ["macros", "rt"] }
tempfile = "3.10"
